--- a/Sticky-Notes/index.html
+++ b/Sticky-Notes/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Interactive Board</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Permanent+Marker&display=swap" rel="stylesheet">
-    </head>
+    <link href="https://fonts.googleapis.com/css2?family=Coming+Soon&display=swap" rel="stylesheet">
+</head>
 <body>
     <div class="board">
         <div class="sticky-note yellow" data-note-id="note-1">
